--- a/templates/project.html
+++ b/templates/project.html
@@ -8,7 +8,7 @@
     {% if data.tasks|length > 0 %}
     <ul>
     {% for task in data.tasks|sort(attribute="name_xfrm") %}
-        <li><a href="./{{ task.path()[1] }}/index.html">{{ task.name }}</a></li>
+        <li><a href="./{{ task.filename() }}/index.html">{{ task.name }}</a></li>
     {% endfor %}
     </ul>
     {% else %}
