--- a/templates/task.html
+++ b/templates/task.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <h1>Asana exporter</h1>
+    {% include 'navigation.html' with context %}
     <h2>{{ data.name }}</h2>
     <div class="task-details">
         <div class="memberships">
