html templates - add simple css

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <title>Overview of workspaces</title>
+    <style>
+        {% include 'basic_style.css' %}
+    </style>
 </head>
 <body>
     <h1>Asana exporter</h1>
