--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <title>{{ data.name }} - Overview of projects</title>
+    <style>
+        {% include 'basic_style.css' %}
+    </style>
 </head>
 <body>
     <h1>Asana exporter</h1>
